[package]
name = "authenticating-rp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.6"
hyper = { version = "0.14.24", features = ["full"] }
hyper-reverse-proxy = "0.5.1"
lazy_static = "1.4.0"
tokio = { version = "1.25.0", features = ["full"] }

