[package]
name = "authenticating-rp"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = { version = "4.1.6", features = ["derive", "env"] }
http-auth-basic = "0.3.3"
hyper = { version = "0.14.24", features = ["full"] }
hyper-reverse-proxy = "0.5.1"
lazy_static = "1.4.0"
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["rustls-tls", "json"], default-features = false}
serde = { "version" = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.38"
